# phd-thesis-appendix

./: LICENSE  README.md
chapter1/: whatisdata-export-20160721.csv
chapter3/: dataart-database-20170330.csv
chapter4/: nmr_schema_dump.sql
chapter4/arduino/: RAT-ROOM-MONITOR.ino
chapter4/mysql-data/: nmr_data-one-day-sample.csv  nmr_env-one-day-sample.csv  nmr_index.csv  nmr_manual_obs.csv  nmr_nest_distances.csv  nmr_readers.csv  nmr_records.csv
chapter4/rat-daemon/: CMakeLists.txt  README.md  arduino_echo_test.pde  systems.rat.rfid.01.plist
chapter4/rat-daemon/include/: email.hpp  rfid_mysql.hpp  rfid_serial.hpp  string_utils.hpp
chapter4/rat-daemon/src/: email.cc  main.cc  rfid_mysql.cc  rfid_serial.cc
chapter5/: author.txt
chapter5/OEW_python_scripts/: nest_adj.txt  nmr_nest_distances_edit.csv  path_dist.py  rats_order_estimator.py  sensor_adj.txt  step01_cleaner_2.py  step02_multi_link_remove.py  step03_ind_path_fixer_2.py
chapter6/: access.txt
chapter7/: dataGetLatestValues.php
chapter7/Arduino/: MasterMotorControlMegaJune14.ino
chapter7/Lego/: sindleloop.rbt  spindleprogram.rbt
chapter7/Max/: tinnSerialComms.maxpat
chapter8/: ethics_application.txt  full-study-data-anonymised.csv
